feat: add link to form.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="modal-container">
         <dialog id="modal" class="modal">
             <p>Привет мир!</p>
+            <a class="btn btn-link" href="/test-terem/form.html" target="_blank" rel="noopener noreferrer">Перейти к форме</a>
             <button type="button" id="close-modal" class="btn btn-info">Закрыть</button>
         </dialog>
     </div>
